# nks_kbs_analyse

./: .pre-commit-config.yaml  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
data/: ordliste_2024_09_09.txt  whitelist.csv
notebooks/: chunking_med_kontekst.ipynb  dokument_splitting.ipynb  generer_sporsmal.ipynb  kunnskapsartikler_oppsplittet.ipynb  opplasting_til_azure_search.ipynb  ordliste.ipynb  utforsk_tekstlengder.ipynb
src/nks_kbs_analyse/: __init__.py  auth.py  azure_search.py  embeddings.py  knowledgebase.py  retriever.py  settings.py
src/nks_kbs_analyse/cli/: __init__.py  kbs.py  main.py  navno_vdb.py  settings.py  vdb.py
tests/: test_auth.py  test_retriever.py
