[project]
name = "nks-kbs-analyse"
version = "0.1.0"
description = "Analyse verktøy for NKS Bob"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "browser-cookie3>=0.19.1",
    "httpx>=0.27.2",
    "langchain-core>=0.2.38",
    "pydantic>=2.8.2",
    "python-dateutil>=2.9.0.post0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pre-commit>=3.8.0",
    "pytest>=8.3.2",
    "ruff>=0.6.3",
]

[tool.pytest.ini_options]
markers = [
    "interactive: tester som krever bruker deltakelse (hopp over med '-m \"not interactive\"')",
]
