[project]
name = "nks-kbs-analyse"
version = "0.1.0"
description = "Analyse verktøy for NKS Bob"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "browser-cookie3>=0.20.1",
    "httpx>=0.27.2",
    "langchain-core>=0.2.38",
    "langchain-text-splitters>=0.2.4",
    "pydantic>=2.8.2",
    "python-dateutil>=2.9.0.post0",
    "pydantic-settings>=2.5.2",
]

[project.optional-dependencies]
notebook = [
    "google-cloud-bigquery>=3.25.0",
    "notebook>=7.2.2",
    "pandas>=2.2.2",
    "plotly>=5.24.0",
    "rich>=13.8.0",
    "ipykernel>=6.29.5",
    "langchain-openai>=0.1.23",
    "ipywidgets>=8.1.5",
]
azure-search = [
    "azure-identity>=1.17.1",
    "azure-search-documents>=11.5.1",
    "langchain-openai>=0.1.23",
    "langchain-community>=0.2.16",
]
cli = [
    "httpx>=0.27.2",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.5.2",
    "rich>=13.8.0",
    "typer>=0.12.5",
]

[project.scripts]
nks-bob = "nks_kbs_analyse.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pre-commit>=3.8.0",
    "pytest-benchmark>=4.0.0",
    "pytest>=8.3.2",
    "ruff>=0.6.3",
]

[tool.pytest.ini_options]
markers = [
    "interactive: tester som krever bruker deltakelse (hopp over med '-m \"not interactive\"')",
]

[tool.mypy]
plugins = ['pydantic.mypy']
